--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
     "@types/express": "^4.17.13",
+    "@types/ws": "^7.4.7",
     "nodemon": "^2.0.12"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.1.0"
   }
 }
